--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,15 +24,15 @@ jobs:
 
       - name: Run Unit Tests
         run: mvn clean test
-        working-directory: ./backend
+        working-directory: back
 
       - name: Run Integration Tests
         run: mvn verify -P integration-tests
-        working-directory: ./backend
+        working-directory: back
 
       - name: Generate test coverage report
         run: mvn jacoco:report
-        working-directory: ./backend
+        working-directory: back
 
   frontend-tests:
     name: Frontend Tests (Angular App)
@@ -48,9 +48,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        working-directory: ./frontend
+        front
 
       - name: Run unit tests
         run: npm run test
-        working-directory: ./frontend
+        front
 
