--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,9 +48,9 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        front
+        working-directory: front
 
       - name: Run unit tests
         run: npm run test
-        front
+        working-directory: front
 
