fix: change frontend testing mode into ci testing mode (forced)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,6 @@ jobs:
         working-directory: front
 
       - name: Run unit tests
-        run: npm run test
+        run: npm run test -- --no-watch --no-progress
         working-directory: front
 
