--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,6 +51,6 @@ jobs:
         working-directory: front
 
       - name: Run unit tests
-        run: npm run test -- --no-watch --no-progress
+        run: npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
         working-directory: front
 
