--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -109,3 +109,58 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=registry,ref=swymn/openclassrooms-p10:buildcache
           cache-to: type=registry,ref=swymn/openclassrooms-p10:buildcache,mode=max
+
+  deploy_frontend:
+    name: Deploy Frontend (Angular App)
+    runs-on: ubuntu-latest
+    needs: frontend-tests
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "24"
+          cache: "npm"
+          cache-dependency-path: "front/package-lock.json"
+
+      - name: Install dependencies
+        run: npm ci
+        working-directory: front
+
+      - name: Build Angular Application
+        run: npm run build -- --prod
+        working-directory: front
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Extract metadata (tags) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: swymn/openclassrooms-p10
+          tags: |
+            type=sha,format=short,prefix=frontend-
+            type=raw,value=frontend-latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+          flavor: |
+            latest=false
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: back
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=registry,ref=swymn/openclassrooms-p10:buildcache
+          cache-to: type=registry,ref=swymn/openclassrooms-p10:buildcache,mode=max
