--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -164,3 +164,35 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=registry,ref=swymn/openclassrooms-p10:buildcache
           cache-to: type=registry,ref=swymn/openclassrooms-p10:buildcache,mode=max
+
+  # ======= Quality Gate =======
+  sonarqube_scan:
+    name: SonarQube Scan
+    runs-on: ubuntu-latest
+    needs: [backend-tests, frontend-tests]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          java-version: "11"
+          distribution: "temurin"
+          cache: "maven"
+
+      - name: SonarQube Scan
+        uses: sonarsource/sonarcloud-github-action@v2
+        with:
+          args: >
+            -Dsonar.projectKey=swymn_openclassrooms-p10
+            -Dsonar.organization=swymn
+            -Dsonar.login=${{ secrets.SONARQUBE_TOKEN }}
+            -Dsonar.java.binaries=back/target/classes
+            -Dsonar.sources=back/src,front/src
+            -Dsonar.tests=back/src/test,front/src/app
+            -Dsonar.test.inclusions=back/src/test/**,front/src/app/**
+            -Dsonar.coverage.jacoco.xmlReportPaths=back/target/site/jacoco/jacoco.xml
+            -Dsonar.javascript.lcov.reportPaths=front/coverage/lcov.info
