fix: add SONAR_TOKEN env variable

--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -185,6 +185,8 @@ jobs:
 
       - name: SonarQube Scan
         uses: sonarsource/sonarcloud-github-action@v2
+        env:
+          SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
         with:
           args: >
             -Dsonar.projectKey=swymn_openclassrooms-p10
