--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -166,35 +166,60 @@ jobs:
           cache-to: type=registry,ref=swymn/openclassrooms-p10:buildcache,mode=max
 
   # ======= Quality Gate =======
-  sonarqube_scan:
-    name: SonarQube Scan
+  sonarqube_scan_frontend:
+    name: SonarQube Scan Frontend
     runs-on: ubuntu-latest
-    needs: [backend-tests, frontend-tests]
+    needs: frontend-tests
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v6
+        with:
+          args: >
+            -Dsonar.sources=frontend
+            -Dsonar.projectKey=swymn_openclassrooms-p10
+            -Dsonar.javascript.lcov.reportPaths=frontend/coverage/lcov.info
+        env:
+          SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
+        
+  sonarqube_scan_backend:
+    name: SonarQube Scan Backend
+    runs-on: ubuntu-latest
+    needs: backend-tests
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up JDK 11
         uses: actions/setup-java@v4
         with:
-          java-version: "11"
-          distribution: "temurin"
-          cache: "maven"
+          java-version: 11
+          distribution: 'temurin'
 
-      - name: SonarQube Scan
-        uses: sonarsource/sonarcloud-github-action@v2
+      - name: Cache SonarQube packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+
+      - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONARQUBE_TOKEN }}
-        with:
-          args: >
-            -Dsonar.projectKey=Swymn_VENTURE-Ugo-P10
-            -Dsonar.organization=swymn
-            -Dsonar.login=${{ secrets.SONARQUBE_TOKEN }}
-            -Dsonar.java.binaries=back/target/classes
-            -Dsonar.sources=back/src,front/src
-            -Dsonar.tests=back/src/test,front/src/app
-            -Dsonar.test.inclusions=back/src/test/**,front/src/app/**
-            -Dsonar.coverage.jacoco.xmlReportPaths=back/target/site/jacoco/jacoco.xml
-            -Dsonar.javascript.lcov.reportPaths=front/coverage/lcov.info
+        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Swymn_VENTURE-Ugo-P10
+        working-directory: back
